--- a/src/components/common/formController/FormController.module.css
+++ b/src/components/common/formController/FormController.module.css
@@ -5,3 +5,8 @@
 .formControl.error span {
     color: red;
 }
+.formControl-summary-error {
+    border: 2px solid red;
+    padding: 5px;
+    color: red;
+}
